The program checks from mongodb if the password is correct
