# backend/routes/auth.js
@@ -2,16 +2,16 @@ const router = require('express').Router();
 const User = require('../models/User');
 const Account = require('../models/Account');
 const Session = require('../models/Session');
-const bcrypt = require('bcrypt');
 const { response } = require('express');
 const jwt = require('jsonwebtoken');
-const verify = require('./verifyToken');
+// const verify = require('./verifyToken');
 const { registerValidation, loginValidation } = require('./validation');
 
+require('dotenv').config;
 //REGISTER
 //registers an userr
 
-router.post('/', async (req, res) => {
+router.post('/register', async (req, res) => {
     const user = new User({
         name: req.body.name,
         email: req.body.email,
@@ -30,42 +30,41 @@ router.post('/', async (req, res) => {
 });
 
 //LOGIN
-router.get('/login', async (req, res) => {
-    res.send('Viva la stallman, pendejo!');
-}),
 router.post('/login',  async (req, res) => {
-
     const legitSession = new Session({
         email: req.body.email,
         password: req.body.password
     })
+    const user = await User.findOne({email: req.body.email});
+    if (!user) return res.status(400).send('wrong email or password');
+    if(req.body.password !== user.password) return res.status(400).send('Wrong password');
+        
     try {
         const session = await legitSession.save();
         res.json(session);
-        
+        //CREATE AND ASSIGN A TOKEN
         const token = jwt.sign({_id: user._id}, process.env.TOKEN_SECRET);
         res.header('auth-token', token).send(token);
         res.send(token);
         res.send('Logged in!');
     } catch (e) {
         res.statusCode = 409
-        //res.json({message: err });
+        res.json({message: err });
         res.json('The session was not initiated.');
     }
-    /*
     const {error} = loginValidation(req.body);
     if (error) return res.status(400).send(error.details[0].message);
 
-//LETS MAKE SURE THE EMAIL IS NOT ALREADY IN THE DATABASE
-
-    const user = await User.findOne({email: req.body.email});
-    if (!user) return res.status(400).send('wrong email or password');
-    //PASSWORD IS CORRECT
-    const validPass = await bcrypt.compare(req.body.password, user.password);
-    if(!validPass) return res.status(400).send('Invalid password');
-
-    */
-    //CREATE AND ASSIGN A TOKEN
 });
+function authenticateToken(req, res, next){
+    const authHeader = req.headers['Authorization'];
+    const token = authHeader && authHeader.split(' ')[1]
+    if(token == null) return res.sendStatus(401);
 
+    jwt.verify(token, process.env.ACCESS_TOKEN_SECRET, (err, user) => {
+        if(err) return res.sendStatus(403);
+        req.user = user;
+        next();
+    })
+}
 module.exports = router;
